# 0xA-badge-rust

./: .gitignore  Cargo.toml  README.md  build-flash.bat  build-flash.sh
.cargo/: config
blink/: .gitignore  Cargo.toml  build.rs
blink-2/: Cargo.toml  memory.x
blink-2/src/: main.rs
blink/.cargo/: config
blink/src/: front_leds.rs  main.rs
usb-serial/: Cargo.toml
usb-serial/src/: main.rs
