[package]
authors = ["anuejn"]
edition = "2018"
readme = "README.md"
name = "blink-2"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
embedded-hal = "0.2.3"
stm32f0xx-hal = {version = "0.15.1", features = ["stm32f042"]}

# this lets you use `cargo fix`!
[[bin]]
name = "blink-2"
test = false
bench = false
