[package]
authors = ["anuejn"]
edition = "2018"
readme = "README.md"
name = "blink"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
embedded-hal = "0.2.3"
stm32f0xx-hal = {version = "0.15.1", features = ["stm32f042"]}

# this lets you use `cargo fix`!
[[bin]]
name = "blink"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
