[package]
authors = ["anuejn"]
edition = "2018"
readme = "README.md"
name = "blink"
version = "0.1.0"

[dependencies]
alloc-cortex-m = "0.3.5"
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
embedded-hal = "0.2.3"
stm32f0xx-hal = {version = "0.15.1", features = ["stm32f042"]}

# Disable some stuff that doesn't work for embedded projects.
# Some tools (IDE etc.) will report irrelevant errors otherwise.
[[bin]]
name = "blink"
test = false
bench = false
